--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,57 @@
-
-/*Типографика*/
 body {
   margin: 0;
 	padding: 0 ;
-  width: 100%;
-  font-size: 14px;
+
   font-family: "PT Sans", Arial, sans-serif;
+  font-size: 14px;
   line-height: 21px;
   font-weight: normal;
   color: #333333;
   text-transform: uppercase;
+
   background-color: #f2f2f2;
+}
+
+.wrapper-shadow {
+  margin: 0 auto;
+  width: 1200px;
+
+  background-color: #ffffff;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
 }
 
 a {
   	text-decoration: none;
 }
 
-.main-navigation {
-  line-height: 26px;
-  font-weight: bold;
-  color: #000000;
+img {
+  max-width: 100%;
+  height: auto;
 }
 
-.site-navigation {
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.site-navigation,
+.offers-list,
+.features-list {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .site-navigation a {
@@ -36,27 +63,103 @@ a {
 }
 
 .site-navigation a:active {
-	color: rgba(0, 0, 0, 0.3);
+  color: rgba(0, 0, 0, 0.3);
 }
 
 .site-navigation-current {
-	color: #766357;
+  color: #766357;
+}
+
+.main-navigation {
+  line-height: 26px;
+  font-weight: bold;
+  color: #000000;
+
+  /*max-*/width: 1200px;
+  /*min-width: 768px;*/
+  margin: 0 auto;
+  padding: 0;
+
+  background-color: #ffffff;
+
+  position: relative;
+}
+
+.main-header-logo {
+  width: 138px;
+  height: 70px;
+
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.site-navigation {
+  max-width: 1056px;
+  /*min-width: 676px;*/
+  margin: 0 auto;
+  padding: 15px 73px;
+
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.site-navigation-item {
+  width: 240px;
+}
+
+.site-navigation-item:first-child,
+.site-navigation-item:nth-child(2) {
+  text-align: left;
+}
+
+.site-navigation-item:nth-child(2) {
+  margin-right: auto;
+}
+
+.site-navigation-item:nth-child(3),
+.site-navigation-item:last-child {
+  text-align: right;
+}
+
+.site-navigation-item:nth-child(3){
+  margin-left: auto;
+}
+
+.main-photo {
+  /*min-width: 768px;*/
+ /*max-*/width: 1200px;
+
+  margin-top: -56px;
 }
 
 .entry {
 	text-align: center;
 	line-height: 26px;
+
+  margin-top: -160px;
+  margin-bottom: 50px;
 }
 
 .intro {
 	font-size: 21px;
   font-weight: bold;
   color: #000000;
+
+  margin: 0;
+  padding: 0;
+  margin-bottom: 27px;
 }
 
-.offers-list,
-.features-list {
-	list-style: none;
+.caption {
+  margin: 0;
+  padding: 0;
+}
+
+.offers-list {
+  display: flex;
+  justify-content: space-around;
 }
 
 .offers-item,
@@ -65,22 +168,130 @@ a {
   text-align: center;
 }
 
+.offers-item {
+  width: 400px;
+}
+
+.offer-reclame {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 85px;
+}
+
 .offer-title,
 .feature-title {
   font-size: 21px;
   line-height: 21px;
+
+  margin: 0;
+  padding: 0;
+}
+
+.offer-title {
+  position: relative;
+
+  margin-bottom: 25px;
+  margin-top: 165px;
+}
+
+.offer-house::before {
+  content: url("../img/icon-1.svg");
+
+  position: absolute;
+  left: 50%;
+  top: -100px;
+  margin-left: -40px;
+
+  width: 75px;
+  height: 72px;
+
+  background-color: #ffffff;
+}
+
+.offer-food::before {
+  content: url("../img/icon-3.svg");
+
+  position: absolute;
+  left: 50%;
+  top: -100px;
+  margin-left: -40px;
+
+  width: 75px;
+  height: 72px;
+
+  background-color: #ffffff;
+
+}
+
+.offer-souvenirs::before {
+  content: url("../img/icon-2.svg");
+
+  position: absolute;
+  left: 50%;
+  top: -105px;
+  margin-left: -40px;
+
+  width: 75px;
+  height: 72px;
+
+  background-color: #ffffff;
+
+}
+.feature-title {
+  margin-top: 50px;
+  margin-bottom: 25px;
+}
+
+.features-list {
+ display: flex;
+  flex-wrap: wrap;
+}
+
+.feature-city {
+  order: -1;
 }
 
 .feature-city,
 .feature-bridge {
-	background-color: #81b3d2;
+  background-color: #81b3d2;
   color: #ffffff;
+  height: 256px;
+
+  display: flex;
 }
 
-.feature-square,
-.feature-road,
-.feature-tourist {
+.feature-bridge {
+  flex-direction: row-reverse;
+
+}
+
+.definition {
+  margin: 0;
+  padding: 0;
+  margin-top: 20px;
+  margin-bottom: 60px;
+}
+
+.add-on {
+  list-style: none;
 	background-color: #cbcad6;
+
+  margin: 0;
+  padding: 0;
+  margin-bottom: 50px;
+
+  display: flex;
+  justify-content: space-around;
+}
+
+
+.description {
+  width: 400px;
+}
+
+.portrait {
+  max-width: 800px;
+  height: auto;
 }
 
 .modal-title {
@@ -88,149 +299,268 @@ a {
   line-height: 36px;
   font-weight: bold;
   color: #000000;
+
+  margin: 0;
+  padding: 0;
+  margin-bottom: 25px;
 }
 
 .modal-tip {
-  font-weight: normal;
   line-height: 24px;
+
+  margin: 0;
+  padding: 0;
+  margin-bottom: 45px;
 }
 
-.inviting {
+.button {
+  font-family: inherit;
   font-size: 21px;
   line-height: 26px;
   font-weight: bold;
-  color: #000000;
-  text-align: center;
-}
 
-.social-list {
-  list-style: none;
-  text-align: center;
-}
-
-.social-btn {
-  color: #ffffff;
-  background-color: #81b3d2;
-}
-
-.social-btn:hover {
-  background-color: #669ec0;
-}
-
-.social-btn:active {
-  background-color: #5496bd;
-  color: rgba(255, 255, 255, 0.3);
-}
-
-.footer-copyright {
-  text-align: center;
-}
-
-.footer-copyright .copyright {
-  	line-height: 26px;
-  	color: #000000;
-}
-
-.modal-close {
-  font-size: 21px;
-	font-family: inherit;
-  line-height: 26px;
-  font-weight: bold;
   text-align: center;
   color: #ffffff;
   vertical-align: middle;
   text-transform: uppercase;
   border: none;
+
+  display: block;
+  margin: 0 auto;
+}
+
+.button a {
+  color: #ffffff;
+}
+
+.modal-close {
   background-color: #766357;
-  width: 568px;
-  height: 86px;
+
+  padding: 30px 145px;
 }
 
 .modal-close:hover {
-	background-color: #604e43;
+  background-color: #604e43;
 }
 
 .modal-close:active {
-	background-color: #503e33;
-	color: rgba(255, 255, 255, 0.3);
+  background-color: #503e33;
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .modal-form-group {
-	font-weight: bold;
-	line-height: 26px;
+  font-weight: bold;
+  line-height: 26px;
+
 }
 
-.modal-form-group input[type="text"] {
-  font: inherit;
+.data-form {
+  width: 568px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.modal-form-group {
+  width: 458px;
+  margin: 0;
+  margin-bottom: 30px;
+}
+
+.modal-form-group .select-child{
+  width: 180px;
+  margin: 0;
+  margin-bottom: 54px;
+}
+
+ .modal-form-group .select-adult{
+  width: 230px;
+  margin: 0;
+  margin-bottom: 54px;
+}
+
+.modal-form-group input {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: 26px;
+  font-weight: bold;
   color: #000000;
   text-transform: uppercase;
   background-color: #f2f2f2;
   border: none;
+
   width: 346px;
-  height: 38px;
-}
+  box-sizing: border-box;
+  padding: 12px 235px 12px 15px;
+  margin: 0;
+  margin-left: 20px;
 
-.modal-form-group input[type="text"]:hover {
-	background-color: #ebebeb;
 }
-
-.modal-form-group input[type="text"]:focus {
-	background-color: #ffffff;
-	border: 2px solid #e5e5e5;
-}
-
 
 input[type="text"].select-child ,
 input[type="text"].select-adults  {
-	width: 38px;
+  width: 116px;
   height: 38px;
   text-align: center;
+  box-sizing: border-box;
+  padding: 12px 15px;
+  margin: 0;
+  margin-left: 20px;
 }
 
-.button {
-  font-size: 21px;
-	font-family: inherit;
-  line-height: 26px;
-  font-weight: bold;
-  text-align: center;
-  color: #ffffff;
-  vertical-align: middle;
-  text-transform: uppercase;
-  border: none;
+.modal-form-group input:hover {
+  background-color: #ebebeb;
+}
+
+.modal-form-group input:focus {
+  background-color: #ffffff;
+  border: 2px solid #e5e5e5;
+}
+
+.search {
   background-color: #81b3d2;
-  width: 458px;
-  height: 58px;
+
+  padding: 15px 195px;
 }
 
-.button:hover {
-	background-color: #669ec0;
+.search:hover {
+  background-color: #669ec0;
 }
 
-.button:active {
-	background-color: #5496bd;
-	color: rgba(255, 255, 255, 0.3);
+.search:active {
+  background-color: #5496bd;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.map {
+  max-width: 1200px;
+  height: 475px;
+}
+
+.filter-list,
+.catalog-list,
+.sort-list {
+  list-style: none;
 }
 
 .filters {
-	background-color: #81b3d2;
-	background-image: url("../img/filter_background.jpg");
+  background-color: #81b3d2;
+	background-image: url("../img/filter-background.jpg");
 	background-repeat: no-repeat;
 	background-position: 0 0;
 	background-size: cover;
 	color: #ffffff;
+
+  width: 1056px;
+  padding: 0 73px;
+}
+
+.filter{
+  display: flex;
+}
+
+.filter-list {
+  margin: 0;
+  padding: 0;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.facilities,
+.hotels  {
+  width: 240px;
+}
+
+.hotels {
+  padding-left: 15px;
+}
+
+.filter-item {
+  margin-bottom: 25px;
+  padding-left: 40px;
+}
+
+.filter-item label {
+  position: relative;
+
+  display: block;
+
+  cursor: pointer;
+}
+
+.filter-input:hover + label,
+.filter-input:active + label {
+  color: #ffffff;
+}
+
+.filter-input-checkbox:not(:checked) + label::before {
+  content: url(../img/checkbox-off.svg);
+  position: absolute;
+  left: -45px;
+  top: 0;
+
+  width: 23px;
+  height: 23px;
+}
+
+.filter-input-checkbox:checked + label::after {
+  content: url(../img/checkbox-on.svg);
+
+  position: absolute;
+  top: 0;
+  left: -45px;
+
+  width: 23px;
+  height: 23px;
+}
+
+.filter-input:disabled + label {
+  color: #000000;
+
+  opacity: 0.5;
+}
+
+
+.value {
+  width:320px;
+
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+
+  color: #ffffff;
+  text-transform: uppercase;
 }
 
 .filter-title {
-	font-size: 16px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 21px;
+
+  margin-top: 25px;
+  margin-bottom: 30px
+}
+
+.value .filter-title {
+  margin-bottom: 9px;
 }
 
 .filter-button {
-	font-size: 14px;
-	line-height: 21px;
-	text-transform: uppercase;
+  display: block;
+  margin: 0 auto;
+  padding: 6px 35px;
+
+  font-size: 14px;
+  line-height: 20px;
   color: #ffffff;
-  width: 133px;
-  height: 32px;
+  text-transform: uppercase;
+
+  background: transparent;
+  border: 2px solid #ffffff;
+  border-radius: 2px;
+  cursor: pointer;
 }
 
 .filter-button:hover {
@@ -238,23 +568,147 @@ input[type="text"].select-adults  {
   background-color: #ffffff;
 }
 
-.filter-list,
-.catalog-list,
-.sort-list {
-	list-style: none;
+.price-controls {
+  position: relative;
+
+  height: 36px;
+  margin-bottom: 20px;
+
+  font-size: 0;
+
+  display: flex;
+
+
+  border: 2px solid #ffffff;
+  border-radius: 2px;
+}
+
+.price-controls::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+
+  width: 2px;
+  height: 22px;
+
+  background: #ffffff;
+}
+
+.price-controls label {
+  display: inline-block;
+
+  font-size: 14px;
+  line-height: 38px;
+  /*vertical-align: middle;*/
+
+  cursor: pointer;
+}
+
+.price-controls .min-price,
+.price-controls .max-price {
+  width: 90px;
+  padding-left: 65px;
+}
+
+.price-controls input {
+  width: 50px;
+  margin: 0;
+
+  color: inherit;
+  font: inherit;
+
+  background: none;
+  border: none;
+}
+
+.range-controls {
+  position: relative;
+
+  margin-bottom: 32px;
+}
+
+.range-controls .scale {
+  height: 2px;
+
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.range-controls .bar {
+  width: 80%;
+  height: 2px;
+
+  background: #ffffff;
+}
+
+.range-toggle {
+  position: absolute;
+  top: -9px;
+
+  width: 4px;
+  height: 4px;
+
+  background: #ababab;
+  border: 8px solid #ffffff;
+  border-radius: 50%;
+  box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+  cursor: pointer;
+}
+
+.range-toggle-min {
+  left: 0;
+}
+
+.range-toggle-max {
+  left: 80%;
+}
+
+.range-toggle:hover {
+  background: #1c4f80;
 }
 
 .sort {
-	font-size: 12px;
+  font-size: 12px;
   line-height: 18px;
   color: #000000;
+
+  width: 1056px;
+  padding: 0 73px;
+
+  display: flex;
+  margin-right: auto;
+  align-items: center;
+  position: relative;
+}
+
+.total {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-right: 47px;
+  position: relative;
+}
+
+.title {
+  margin-right: 40px;
+}
+
+.sort-list {
+  margin: 0;
+  padding: 0;
+  width: 240px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .sort a {
-  color: rgba(0, 0, 0, 0.3);
-  border-bottom: 1px dashed #81b3d2;
   font-size: inherit;
   line-height: inherit;
+  color: rgba(0, 0, 0, 0.3);
+  border-bottom: 1px dashed #81b3d2;
+
 }
 
 .sort a:hover,
@@ -263,8 +717,32 @@ input[type="text"].select-adults  {
 }
 
 .sort a:active {
-	border-bottom: none;
-	color: #000000;
+  border-bottom: none;
+  color: #000000;
+}
+
+.sort::before {
+  content: "";
+  content: url("../img/icon-down-dir.svg");
+  position: absolute;
+
+  width: 11px;
+  height: 10px;
+
+  top: 37px;
+  right: 75px;
+  fill: #81b3d2;
+}
+
+.sort::after {
+  content: url("../img/icon-up-dir.svg");
+  position: absolute;
+
+  width: 11px;
+  height: 10px;
+
+  top: 37px;
+  right: 99px;
 }
 
 .sort,
@@ -272,7 +750,7 @@ input[type="text"].select-adults  {
   border-bottom: 1px solid #e5e5e5;
 }
 
-.hotel-name,
+.hotel-name a,
 .total {
 	font-size: 21px;
   line-height: 26px;
@@ -280,17 +758,110 @@ input[type="text"].select-adults  {
   color: #000000;
 }
 
-.rating {
-  text-align: center;
-	color: #666666;
-	background-color: #f2f2f2;
-  width: 110px;
-  height: 27px;
+.hotel-name a:hover {
+  color: #81b3d2;
 }
 
-.btn {
-  font-size: inherit;
-  font-family: inherit;
+.hotel-name a:active {
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.catalog-item {
+  padding: 0 73px;
+  height: 150px;
+
+  display: flex;
+}
+
+.catalog-item img {
+  width: 135px;
+  height: 90px;
+  margin-right: 30px;
+
+}
+
+.catalog-item-image {
+  order: -1;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.catalog-list {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+
+}
+
+.information {
+  display: flex;
+  flex-direction: column;
+  width: 260px;
+  margin-top: 25px;
+  margin-bottom: 30px;
+  justify-content: space-between;
+}
+
+.information p {
+  margin: 0;
+  padding: 0;
+}
+
+.hotel-name {
+  margin: 0;
+  padding: 0;
+}
+
+.catalog-item:first-child .place {
+  margin-right: 40px;
+}
+
+.catalog-item:nth-child(2) .place {
+  margin-right: 65px;
+}
+
+.catalog-item:last-child .place {
+  margin-right: 20px;
+}
+
+.rating {
+  text-align: center;
+  color: #666666;
+  background-color: #f2f2f2;
+
+  margin-left: auto;
+  margin-top: 95px;
+  margin-bottom: 30px;
+  padding: 3px 15px;
+
+  position: relative;
+}
+
+.rating::before {
+  content: url("../img/star.svg");
+
+  width: 18px;
+  height: 17px;
+
+  position: absolute;
+  left: 85%;
+  top: -65px;
+}
+
+.rating::after {
+  content: url("../img/star.svg");
+
+  width: 18px;
+  height: 17px;
+
+  position: absolute;
+  left: 65%;
+  top: -65px;
+}
+
+.btn{
+  font: inherit;
   line-height: 21px;
   font-weight: bold;
   text-align: center;
@@ -298,12 +869,14 @@ input[type="text"].select-adults  {
   text-transform: uppercase;
   border: none;
 
+  display: inline-block;
+  padding: 4px 17px;
 }
 
 .btn-info {
 	background-color: #81b3d2;
-  width: 110px;
-  height: 27px;
+
+  margin-right: 5px;
 }
 
 .btn-info:hover {
@@ -317,8 +890,6 @@ input[type="text"].select-adults  {
 
 .btn-booking {
 	background-color: #766357;
-	width: 142px;
-	height: 27px;
 }
 
 .btn-booking:hover {
@@ -330,147 +901,44 @@ input[type="text"].select-adults  {
 	color: rgba(255, 255, 255, 0.3);
 }
 
-/*Стили для сеток*/
-.html,
-.body {
-  min-width: 768px;
-  min-height: 2762px;
+.btn.disabled,
+.btn:disabled {
+  cursor: default;
+  opacity: 0.5;
+  background-color: #000000;
 }
 
-.site-navigation {
-  padding: 0 73px;
+
+.main-footer {
   margin: 0 auto;
+  padding: 0;
+  width: 1200px;
+
+  background-color: #ffffff;
+
+}
+
+.wrapper {
   display: flex;
+  padding: 35px 73px;
   justify-content: space-between;
-  width: 1056px;
-  height: 56px;
-  background-color: #ffffff;
-}
 
-.site-navigation-item {
-  padding-top: 15px;
-}
-
-.main-header-logo {
-  width: 138px;
-  height: 70px;
-}
-
-.container,
-.main-footer {
-  width: 1200px;
-  background-color: #ffffff;
-  margin: 0 auto;
-}
-
-.main-photo {
-  width: 1200px;
-  height: 800px;
-}
-
-.intro {
-  margin: 0;
-  padding: 0;
-  margin-bottom: 29px;
-}
-
-.caption {
-  margin: 0;
-  padding: 0;
-  margin-bottom: 50px;
-}
-
-.offers-list {
-  display: flex;
-  justify-content: space-around;
-  margin: 0;
-  padding: 0;
-  order: -1;
-}
-
-.offers-item {
-  width: 300px;
-}
-
-.features-list {
-  display: flex;
-  flex-direction: column;
-  margin: 0;
-  padding: 0;
-  flex-wrap: wrap;
-}
-
-.features-item{
-   height: 257px;
-}
-
-.feature-city {
-order: -2;
-}
-
-.feature-city,
-.feature-bridge {
-  display: flex;
-}
-
-.feature-bridge {
-  flex-direction: row-reverse;
-}
-
-.description {
-  padding-top: 45px;
-  width: 400px;
-}
-
-.portrait {
-  width: 800px;
- height: 257px;
-}
-
-.feature-title {
-  margin: 0;
-  margin-bottom: 29px;
-}
-
-.add-on{
-  list-style: none;
-  display: flex;
-  margin: 0;
-  padding: 0;
-}
-
-.feature-square,
-.feature-road,
-.feature-tourist {
-  width: 400px;
-  height: 257px;
-  padding-top: 44px;
-}
-
-.modal-title {
-  margin: 0;
-  padding: 0;
-}
-
-.modal-tip {
-  margin-bottom: 50px;
-}
-
-.modal-map {
-  width: 1200px;
-  height: 475px;
-}
-
-.main-footer {
-  display: flex;
-  justify-content: space-around;
-  height: 120px;
 }
 
 .inviting,
-.footer-copyright,
-.social{
-  align-self: center;
+.social,
+.footer-copyright {
+  width: 255px;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.inviting {
+  font-size: 21px;
+  line-height: 26px;
+  font-weight: bold;
+  color: #000000;
+
 }
 
 .social-list {
@@ -479,79 +947,57 @@ order: -2;
   padding: 0;
 }
 
-.filter{
+.social-list {
+  list-style: none;
+  text-align: center;
+
   display: flex;
-  width: 1056px;
-  min-height: 185px;
-  padding: 40px 73px;
+  width: 150px;
+  justify-content: space-between;
+  flex-wrap: wrap;
   margin: 0 auto;
-}
-
-.filter-list {
-  margin: 0;
   padding: 0;
 }
 
-.sort {
+.social-btn {
+  color: #ffffff;
+  background-color: #81b3d2;
+
   display: flex;
-  width: 530px;
-  padding: 40px 73px;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: center;
+  width: 46px;
+  height: 49px;
 }
 
-.sort-list {
-  margin: 0;
-  padding: 0;
+.social-btn:hover {
+  background-color: #669ec0;
+}
+
+
+.social-btn:active path{
+  fill: rgba(255, 255, 255, 0.3);
+}
+
+.social-btn:active {
+  background-color: #5496bd;
+}
+
+.copyright {
+  line-height: 26px;
+  color: #000000;
+  padding-right: 10px;
+}
+
+.footer-copyright {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
 }
 
-.facilities {
-  margin-right: 110px;
+.link:hover path {
+  fill: #82b4d2;
 }
 
-.value {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin-left: auto;
-  margin-top: 30px;
-}
-
-.filter-button {
-  margin: 0;
-  padding: 0;
-  margin-top: 30px;
-}
-
-.catalog-list {
-  display: flex;
-  flex-direction: column;
-}
-
-.catalog-item {
-  padding: 30px 73px;
-  display: flex;
-  height: 150px;
-}
-
-.catalog-item img {
-  width: 135px;
-  height: 90px;
-  margin-right: 20px;
-}
-
-.information {
-  display: flex;
-  flex-direction: column;
-  width: 400px;
-}
-.hotel-name {
-  margin: 0;
-  padding: 0;
-}
-
-.rating {
-  margin-left: auto;
-  margin-top: 96px;
+.link:active path {
+  fill: rgba(0, 0, 0, 0.3);
 }
