--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
   width: 1200px;
 
   background-color: #ffffff;
-  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 
 a {
@@ -164,7 +164,7 @@ input[type="checkbox"].visually-hidden {
 
 .offers-item,
 .features-item,
-.modal {
+.modal-data-current {
   text-align: center;
 }
 
@@ -190,7 +190,7 @@ input[type="checkbox"].visually-hidden {
 .offer-title {
   position: relative;
 
-  margin-bottom: 25px;
+  margin-bottom: 20px;
   margin-top: 165px;
 }
 
@@ -291,7 +291,6 @@ input[type="checkbox"].visually-hidden {
 
 .portrait {
   max-width: 800px;
-  height: auto;
 }
 
 .modal-title {
@@ -336,7 +335,9 @@ input[type="checkbox"].visually-hidden {
 .modal-close {
   background-color: #766357;
 
-  padding: 30px 145px;
+  padding: 30px 143px;
+
+  position: relative;
 }
 
 .modal-close:hover {
@@ -348,36 +349,39 @@ input[type="checkbox"].visually-hidden {
   color: rgba(255, 255, 255, 0.3);
 }
 
+.modal {
+  position: absolute;
+
+  color: #000000;
+  background-color: #ffffff;
+
+
+  left: 50%;
+  margin-left: -285px;
+
+
+  width: 460px;
+  padding: 55px;
+
+  /*z-index: 2;*/
+}
+/*
+.modal-overlay {
+  position: fixed;
+
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}*/
+
 .modal-form-group {
   font-weight: bold;
   line-height: 26px;
-
-}
-
-.data-form {
-  width: 568px;
-  margin: 0 auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.modal-form-group {
-  width: 458px;
-  margin: 0;
-  margin-bottom: 30px;
-}
-
-.modal-form-group .select-child{
-  width: 180px;
-  margin: 0;
-  margin-bottom: 54px;
-}
-
- .modal-form-group .select-adult{
-  width: 230px;
-  margin: 0;
-  margin-bottom: 54px;
 }
 
 .modal-form-group input {
@@ -390,23 +394,41 @@ input[type="checkbox"].visually-hidden {
   background-color: #f2f2f2;
   border: none;
 
-  width: 346px;
   box-sizing: border-box;
-  padding: 12px 235px 12px 15px;
-  margin: 0;
-  margin-left: 20px;
+  width: 346px;
+  padding: 6px 14px;
+  padding-right: 40px;
+
+  margin-bottom: 30px;
 
 }
 
-input[type="text"].select-child ,
-input[type="text"].select-adults  {
-  width: 116px;
-  height: 38px;
-  text-align: center;
-  box-sizing: border-box;
-  padding: 12px 15px;
-  margin: 0;
+.modal-form-group label{
+  margin-right: 15px;
+}
+
+.input-wrapper {
+ display: flex;
+ justify-content: space-between;
+ flex-wrap: wrap;;
+}
+
+.select-adults{
   margin-left: 20px;
+}
+
+.select-child{
+  margin-left: 10px;
+}
+
+input.select-child ,
+input.select-adults  {
+  text-align: center;
+
+  box-sizing: border-box;
+  width: 114px;
+  padding: 6px 40px;
+  margin-bottom: 55px;
 }
 
 .modal-form-group input:hover {
@@ -418,10 +440,25 @@ input[type="text"].select-adults  {
   border: 2px solid #e5e5e5;
 }
 
+.select-arrival,
+.select-departure {
+  background-image: url("../img/calendar.svg");
+  background-position: 320px center;
+  background-repeat: no-repeat;
+}
+
+.select-adults,
+.select-child {
+  background-image: url("../img/minus-plus.png");
+  background-position: 15px center;
+  background-repeat: no-repeat;
+}
+
 .search {
   background-color: #81b3d2;
+  width: 100%;
 
-  padding: 15px 195px;
+  padding: 15px 198px;
 }
 
 .search:hover {
@@ -436,6 +473,7 @@ input[type="text"].select-adults  {
 .map {
   max-width: 1200px;
   height: 475px;
+  margin-top :-15px;
 }
 
 .filter-list,
@@ -473,8 +511,8 @@ input[type="text"].select-adults  {
   width: 240px;
 }
 
-.hotels {
-  padding-left: 15px;
+.facilities {
+  margin-right: 15px;
 }
 
 .filter-item {
@@ -498,8 +536,8 @@ input[type="text"].select-adults  {
 .filter-input-checkbox:not(:checked) + label::before {
   content: url(../img/checkbox-off.svg);
   position: absolute;
-  left: -45px;
-  top: 0;
+  left: -40px;
+  top: -5px;
 
   width: 23px;
   height: 23px;
@@ -509,8 +547,8 @@ input[type="text"].select-adults  {
   content: url(../img/checkbox-on.svg);
 
   position: absolute;
-  top: 0;
-  left: -45px;
+  top: -5px;
+  left: -40px;
 
   width: 23px;
   height: 23px;
@@ -524,7 +562,7 @@ input[type="text"].select-adults  {
 
 
 .value {
-  width:320px;
+  width:330px;
 
   display: flex;
   flex-direction: column;
@@ -571,7 +609,7 @@ input[type="text"].select-adults  {
 .price-controls {
   position: relative;
 
-  height: 36px;
+  height: 35px;
   margin-bottom: 20px;
 
   font-size: 0;
@@ -602,7 +640,6 @@ input[type="text"].select-adults  {
 
   font-size: 14px;
   line-height: 38px;
-  /*vertical-align: middle;*/
 
   cursor: pointer;
 }
@@ -674,13 +711,13 @@ input[type="text"].select-adults  {
   line-height: 18px;
   color: #000000;
 
-  width: 1056px;
-  padding: 0 73px;
-
   display: flex;
   margin-right: auto;
   align-items: center;
   position: relative;
+
+  width: 1056px;
+  padding: 0 73px;
 }
 
 .total {
@@ -708,7 +745,6 @@ input[type="text"].select-adults  {
   line-height: inherit;
   color: rgba(0, 0, 0, 0.3);
   border-bottom: 1px dashed #81b3d2;
-
 }
 
 .sort a:hover,
@@ -766,17 +802,16 @@ input[type="text"].select-adults  {
   color: rgba(0, 0, 0, 0.3);
 }
 
-.catalog-item {
-  padding: 0 73px;
-  height: 150px;
-
+.catalog-list {
   display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
 }
 
-.catalog-item img {
-  width: 135px;
-  height: 90px;
-  margin-right: 30px;
+.catalog-item {
+  display: flex;
+  padding: 0 73px;
 
 }
 
@@ -784,31 +819,22 @@ input[type="text"].select-adults  {
   order: -1;
   margin-top: 30px;
   margin-bottom: 30px;
-}
-
-.catalog-list {
-  display: flex;
-  flex-direction: column;
-  margin: 0;
-  padding: 0;
-
+  width: 135px;
+  height: 90px;
+  margin-right: 30px;
 }
 
 .information {
   display: flex;
   flex-direction: column;
   width: 260px;
+  justify-content: space-between;
   margin-top: 25px;
   margin-bottom: 30px;
-  justify-content: space-between;
 }
 
+.hotel-name,
 .information p {
-  margin: 0;
-  padding: 0;
-}
-
-.hotel-name {
   margin: 0;
   padding: 0;
 }
