--- a/css/style.css
+++ b/css/style.css
@@ -384,7 +384,7 @@ input[type="checkbox"].visually-hidden {
   left: 50%;
   margin-left: -285px;
   padding: 55px;
-  z-index: 3;
+  z-index: 1;
 }
 
 .modal-show {
@@ -617,17 +617,17 @@ input.select-adults  {
 
 .map {
   max-height: 594px;
+  position: relative;
 }
 
 .map div {
   position: absolute;
   top: 0;
-  left: 0;
-  z-index: 1;
+  right: 0;
+  z-index: -1;
 }
 
 .map iframe {
-  position: relative;
   z-index: 2;
 
   border: none;
