--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,6 @@ body {
 .wrapper-shadow {
   margin: 0 auto;
   width: 1200px;
-  height: auto;
 
   background-color: #ffffff;
   -webkit-box-shadow: 0px 5px 15px 15px rgba(0, 0, 0, 0.2);
@@ -79,8 +78,7 @@ input[type="checkbox"].visually-hidden {
   font-weight: bold;
   color: #000000;
 
-  /*max-*/width: 1200px;
-  /*min-width: 768px;*/
+  max-width: 1200px;
   margin: 0 auto;
   padding: 0;
 
@@ -100,11 +98,11 @@ input[type="checkbox"].visually-hidden {
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  z-index: 1;
 }
 
 .site-navigation {
   max-width: 1056px;
-  /*min-width: 676px;*/
   margin: 0 auto;
   padding: 15px 73px;
 
@@ -138,18 +136,41 @@ input[type="checkbox"].visually-hidden {
   margin-left: auto;
 }
 
-.main-photo {
-  /*min-width: 768px;*/
- /*max-*/width: 1200px;
+.invitation img {
+    width: 460px;
+    height: 355px;
+    margin-top: 76px;
+}
 
-  margin-top: -56px;
+
+.invitation {
+  height: 510px;
+  text-align: center;
+  position: relative;
+
+  background: url("../img/main-background.jpg") no-repeat 50% -85px;
+  background-size: cover;
+  background-color: #81b3d2;
+}
+
+
+.invitation::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 57px;
+  background-image: url("../img/Shape.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  bottom: 0;
+  left: 0;
 }
 
 .entry {
 	text-align: center;
 	line-height: 26px;
 
-  margin-top: -160px;
+  margin-top: 60px;
   margin-bottom: 50px;
 }
 
@@ -616,7 +637,7 @@ input.select-adults  {
 
 
 .map {
-  max-height: 594px;
+  max-height: 593px;
   position: relative;
 }
 
@@ -636,11 +657,12 @@ input.select-adults  {
 .main-footer {
   position: relative;
   max-height: 120px;
-
 }
 
 .main-page {
   position: absolute;
+  width: 100%;
+  top: -120px;
 }
 
 .footer-wrapper {
